--- a/css/index.css
+++ b/css/index.css
@@ -3,118 +3,95 @@
 @import url('https://fonts.googleapis.com/css?family=Julius+Sans+One');
 @import url('https://fonts.googleapis.com/earlyaccess/kopubbatang.css');
 
-
-
-
-
-
-
-
-
 /*---------------- base ----------------*/
 
-
-* {
+*,
+html {
     /*outline: 1px solid red;*/
     font-family: 'KoPub Batang', serif;
 }
 
-h1{
-    font-size:30px;
+h1 {
+    font-size: 30px;
     padding: 10px 0px;
-    font-family: 'Julius Sans One', sans-serif;
 }
 
-h2{
-    font-size:15px;
-    font-family: 'KoPub Batang', serif;
+h2 {
+    font-size: 15px;
 }
 
 p {
-    font-family: 'KoPub Batang', serif;
     line-height: 20px;
 }
 
-.title{
+a {
+    text-decoration: none;
+}
+
+a:visited{
+    color:black;
+}
+
+ul {
+    margin:0;
+}
+.title {
     font-family: 'Julius Sans One', sans-serif;
 }
 
-.btn{
-    height:40px;
-    padding:0px 20px;
-    margin:10px;
-    font-size:20px;
-    border:none;
-    cursor:pointer;
+.btn {
+    height: 50px;
+    padding: 0px 20px;
+    margin: 10px;
+    font-size: 20px;
+    border: none;
+    cursor: pointer;
     font-family: 'Julius Sans One', sans-serif;
 }
+
 
 /*---------------- header ----------------*/
 
 header {
     height: 50px;
     width: 100%;
-    box-shadow: 0 3px 4px 0 rgba(0,0,0,0.14), 0 3px 3px -2px rgba(0,0,0,0.12), 0 1px 8px 0 rgba(0,0,0,0.2);
-    -webkit-box-shadow:0 3px 4px 0 rgba(0,0,0,0.14), 0 3px 3px -2px rgba(0,0,0,0.12), 0 1px 8px 0 rgba(0,0,0,0.2);
+    box-shadow: 0 3px 4px 0 rgba(0, 0, 0, 0.14), 0 3px 3px -2px rgba(0, 0, 0, 0.12), 0 1px 8px 0 rgba(0, 0, 0, 0.2);
+    -webkit-box-shadow: 0 3px 4px 0 rgba(0, 0, 0, 0.14), 0 3px 3px -2px rgba(0, 0, 0, 0.12), 0 1px 8px 0 rgba(0, 0, 0, 0.2);
 }
 
-.nav {
+nav {
     width: 1170px;
     height: 50px;
-    margin:auto;
-}
-
-.nav-logoBox,
-.nav-buttonBox{
-    display: inline-block;
+    margin: auto;
 }
 
 .nav-logoBox > h1.title {
     line-height: 50px;
-    font-size:25px;
+    font-size: 25px;
     margin-left:20px;
-    padding:0;
-}
-
-.nav-buttonBox {
-    float:right;
-
-}
-
-.btn-contact {
-    color:black;
-    font-family: 'Julius Sans One', sans-serif;
-    background: white;
-    transition: 0.5s ease;
-    border-radius: 0;
-}
-
-.btn-contact:hover{
-    background: #6d6d6d;
-    color:white;
-    border-radius: 30px 0px 0px 0;
+    padding: 0;
 }
 
 
 /*---------------- section ----------------*/
 /*---------------- coverPage ----------------*/
 
-
 .coverPage {
     height: 585px;
-    margin:auto;
+    margin: auto;
     background: url("../img/sample3.jpg");
-    background-size:cover;
+    background-size: cover;
     background-position: center;
-    transition: 1s ease;
-    -webkit-transition: 1s ease;
-    -o-transition: 1s ease;
-    -moz-transition: 1s ease;
-    transform: 1s ease;
+    transition: 0.5s ease;
+    -webkit-transition: 0.5s ease;
+    -o-transition: 0.5s ease;
+    -moz-transition: 0.5s ease;
+    transform: 0.5s ease;
+    -webkit-transform: 0.5s ease;
 }
 
 .coverPage-container {
-    margin:auto;
+    margin: auto;
     text-align: center;
 }
 
@@ -123,85 +100,110 @@ header {
 }
 
 .coverPage-textBox > h2 {
-    margin:10px 0px;
+    margin: 10px 0px;
     line-height: 20px;
 }
 
 .coverPage-buttonBox > .btn-getStarted {
     background: #b70000;
-    color:white;
-    height:40px;
-    padding:5px 40px;
+    color: white;
+    padding: 5px 40px;
     transition: 0.5s ease;
 }
 
-.coverPage-buttonBox > .btn-getStarted:hover{
-    color:black;
+.coverPage-buttonBox > .btn-getStarted:hover {
+    color: black;
     background: white;
 }
 
 
 /*---------------- howToUse ----------------*/
+
 .howToUse {
-    width:100%;
-    margin-top:40px;
+    width: 100%;
+    margin-top: 40px;
 }
 
-.howToUse-container{
-    height:50px;
-    width:1170px;
-    margin:auto;
+.howToUse-container {
+    height: 50px;
+    width: 1170px;
+    margin: auto;
     text-align: center;
 }
 
-.howToUse-box{
-    width:33.333%;
-    height:300px;
-    float:left;
+.howToUse-box {
+    width: 33.333%;
+    height: 300px;
+    float: left;
 }
 
-
-.howToUse-box-imgBox{
-    width:100%;
-    padding-top:30px;
-    padding-bottom:30px;
+.howToUse-box-imgBox {
+    width: 100%;
+    padding-top: 30px;
+    padding-bottom: 30px;
 }
 
-.howToUse-box-imgBox-img{
-    height:150px;
-    width:150px;
+.howToUse-box-imgBox-img {
+    height: 150px;
+    width: 150px;
     border-radius: 100%;
 }
 
 
-/*---------------- mediaQuery ----------------*/
-@media (max-width: 1170px){
+/*---------------- quiz ----------------*/
+.btn-question{
+    background: black;
+    color:white;
+    margin-top:20px;
+}
 
+.btn-question:hover{
+    background: #b70000;
+    transition: 0.5s ease;
+}
+
+.answerList{
+    margin-top:10px;
+}
+
+/*---------------- resultBox ----------------*/
+
+.recomandList > li{
+    display: inline;
+    margin: 2px 4px;
+}
+
+.result-box{
+    padding:20px;
+}
+
+/*---------------- mediaQuery ----------------*/
+
+@media (max-width: 1170px) {
 
     .coverPage-textBox h1.title {
         font-size: 30px;
         padding: 5px 0px;
     }
-
     .coverPage-buttonBox > .btn-getStarted {
         background: #b70000;
-        color:white;
-        height:50px;
-        padding:5px 40px;
-        transition: 0.5s ease;
+        color: white;
+        height: 50px;
+        padding: 5px 40px;
+        transition: 1s ease;
     }
-
     .nav {
-        width:100%;
+        width: 100%;
     }
-
     .howToUse-container {
-        width:100%;
+        width: 100%;
     }
-
     .howToUse-box {
         width: 100%;
     }
 
-
+    .quiz-box > h1{
+        font-size: 20px;
+        padding:15px 20px 5px;
+    }
 }
